--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-intl": "5.25.1",
     "react-is": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.5"
   },
@@ -26,7 +27,8 @@
     "prepare": "husky install",
     "build": "tsc",
     "precommit": "lint-staged",
-    "develop": "tsc -w"
+    "develop": "tsc -w",
+    "test": "echo 'Tests not implemented yet'"
   },
   "peerDependencies": {
     "@strapi/strapi": "^4.0.0"
@@ -36,7 +38,8 @@
     "@babel/eslint-parser": "~7.18.9",
     "@babel/preset-react": "~7.18.6",
     "@strapi/eslint-config": "~0.1.2",
-    "@types/koa": "~2.13.5",
+    "@strapi/strapi": "^4.3.8",
+    "@strapi/typescript-utils": "^4.3.8",
     "eslint": "~8.23.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
