--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tiptap/core": "~2.0.0-beta.183",
     "@tiptap/react": "~2.0.0-beta.115",
     "@tiptap/starter-kit": "~2.0.0-beta.192",
+    "polished": "^4.2.2",
     "prop-types": "~15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-intl": "5.25.1",
     "react-is": "^18.2.0",
     "react-query": "^3.39.2",
