--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
   "maintainers": [
     "Ilya Amelevich <ilya.amelevich@gmail.com>"
   ],
+  "scripts": {
+    "build": "tsc",
+    "develop": "tsc -w",
+    "precommit": "lint-staged",
+    "prepare": "husky install",
+    "test": "echo 'Tests not implemented yet'"
+  },
+  "lint-staged": {
+    "package.json": [
+      "prettier-package-json --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "@strapi/design-system": "^1.2.2",
     "@strapi/helper-plugin": "^4.3.8",
@@ -14,6 +27,7 @@
     "@tiptap/core": "~2.0.0-beta.183",
     "@tiptap/react": "~2.0.0-beta.115",
     "@tiptap/starter-kit": "~2.0.0-beta.192",
+    "formik": "^2.2.9",
     "polished": "^4.2.2",
     "prop-types": "~15.8.1",
     "react": "^17.0.2",
@@ -24,16 +38,6 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.5"
-  },
-  "scripts": {
-    "prepare": "husky install",
-    "build": "tsc",
-    "precommit": "lint-staged",
-    "develop": "tsc -w",
-    "test": "echo 'Tests not implemented yet'"
-  },
-  "peerDependencies": {
-    "@strapi/strapi": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
@@ -49,15 +53,12 @@
     "prettier-plugin-packagejson": "~2.2.18",
     "typescript": "4.6.3"
   },
+  "peerDependencies": {
+    "@strapi/strapi": "^4.0.0"
+  },
   "engines": {
     "node": ">=14.19.1 <=16.x.x",
     "npm": ">=6.0.0"
-  },
-  "lint-staged": {
-    "package.json": [
-      "prettier-package-json --write",
-      "git add"
-    ]
   },
   "strapi": {
     "name": "another-tiptap-editor",
