Some rafactor and add word count
Signed-off-by: Ilya Amelevich <ilya.amelevich@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@strapi/helper-plugin": "^4.3.8",
     "@strapi/icons": "^1.2.2",
     "@tiptap/core": "~2.0.0-beta.183",
+    "@tiptap/extension-character-count": "^2.0.0-beta.31",
     "@tiptap/react": "~2.0.0-beta.115",
     "@tiptap/starter-kit": "~2.0.0-beta.192",
     "formik": "^2.2.9",
     "polished": "^4.2.2",
-    "prop-types": "~15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
