--- a/package.json
+++ b/package.json
@@ -25,10 +25,29 @@
     "@strapi/helper-plugin": "^4.3.8",
     "@strapi/icons": "^1.2.2",
     "@tiptap/core": "~2.0.0-beta.183",
+    "@tiptap/extension-blockquote": "^2.0.0-beta.29",
+    "@tiptap/extension-bold": "^2.0.0-beta.28",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.29",
     "@tiptap/extension-character-count": "^2.0.0-beta.31",
+    "@tiptap/extension-code": "^2.0.0-beta.29",
+    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.73",
+    "@tiptap/extension-document": "^2.0.0-beta.17",
+    "@tiptap/extension-dropcursor": "^2.0.0-beta.29",
+    "@tiptap/extension-focus": "^2.0.0-beta.194",
+    "@tiptap/extension-gapcursor": "^2.0.0-beta.39",
+    "@tiptap/extension-hard-break": "^2.0.0-beta.33",
+    "@tiptap/extension-heading": "^2.0.0-beta.29",
+    "@tiptap/extension-history": "^2.0.0-beta.26",
+    "@tiptap/extension-horizontal-rule": "^2.0.0-beta.36",
+    "@tiptap/extension-italic": "^2.0.0-beta.28",
+    "@tiptap/extension-list-item": "^2.0.0-beta.23",
+    "@tiptap/extension-ordered-list": "^2.0.0-beta.30",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.26",
+    "@tiptap/extension-strike": "^2.0.0-beta.29",
+    "@tiptap/extension-text": "^2.0.0-beta.17",
     "@tiptap/react": "~2.0.0-beta.115",
-    "@tiptap/starter-kit": "~2.0.0-beta.192",
     "formik": "^2.2.9",
+    "lowlight": "^2.7.0",
     "polished": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
